[gd_scene load_steps=15 format=3 uid="uid://cc8tjtvnjhklj"]

[ext_resource type="Script" uid="uid://dfupnbhtfcmnr" path="res://scenes/login signup/login_signup.gd" id="1_m1axk"]
[ext_resource type="Texture2D" uid="uid://dn5e8mqxacm21" path="res://assets/Background/main page 2.webp" id="2_k44pf"]
[ext_resource type="Texture2D" uid="uid://08r5oghljqva" path="res://assets/Star/Starbox box 1.webp" id="3_0ewxu"]
[ext_resource type="FontFile" uid="uid://cmg6kxyr5xfq7" path="res://assets/Fonts/Mochibop-Demo.ttf" id="4_6qjmi"]
[ext_resource type="FontFile" uid="uid://c37vo61y0brq1" path="res://assets/Fonts/your-doodle-font/Your Doodle Font.ttf" id="4_vyguc"]
[ext_resource type="Texture2D" uid="uid://dw0pj5m2y7kv8" path="res://assets/Buttons/Gemini_Generated_Image_j7inz5j7inz5j7in.webp" id="5_k44pf"]
[ext_resource type="LabelSettings" uid="uid://s3ahnn5atq0a" path="res://scenes/gunung ragabasa/LabelOptionRagabasa.tres" id="6_k7ows"]
[ext_resource type="Texture2D" uid="uid://crfnhs06prdxy" path="res://assets/Ika Duba/Ika original.webp" id="8_k44pf"]
[ext_resource type="Texture2D" uid="uid://mf6ccuo1gj4i" path="res://assets/Ika Duba/Duba original.webp" id="8_vgytq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vyguc"]
texture = ExtResource("3_0ewxu")

[sub_resource type="LabelSettings" id="LabelSettings_ig160"]
font = ExtResource("4_6qjmi")
font_size = 75
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dfo07"]
font = ExtResource("4_vyguc")
font_size = 45
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k44pf"]
font_size = 41

[sub_resource type="LabelSettings" id="LabelSettings_6qjmi"]
font = ExtResource("4_vyguc")
font_size = 25
font_color = Color(0, 0, 0, 1)

[node name="LoginSignup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m1axk")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k44pf")
expand_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -324.0
offset_top = -86.0
offset_right = 324.0
offset_bottom = 692.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vyguc")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -221.0
offset_top = 90.0
offset_right = 231.0
offset_bottom = 181.0
grow_horizontal = 2
text = "MASUK / DAFTAR"
label_settings = SubResource("LabelSettings_ig160")

[node name="Login" type="TextureButton" parent="Panel"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
offset_left = 84.0
offset_top = 576.0
offset_right = 318.0
offset_bottom = 695.0
texture_normal = ExtResource("5_k44pf")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/Login"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "MASUK"
label_settings = ExtResource("6_k7ows")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Register" type="TextureButton" parent="Panel"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
offset_left = 319.0
offset_top = 577.0
offset_right = 547.0
offset_bottom = 696.0
texture_normal = ExtResource("5_k44pf")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Panel/Register"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "DAFTAR"
label_settings = ExtResource("6_k7ows")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -150.0
offset_right = 210.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "pos-el"
label_settings = SubResource("LabelSettings_dfo07")

[node name="EmailLine" type="LineEdit" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 35

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_k44pf")

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "kata sandi"
label_settings = SubResource("LabelSettings_dfo07")

[node name="PasswordLine" type="LineEdit" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 35
secret = true

[node name="StatusLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -201.0
offset_top = -94.0
offset_right = 201.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_6qjmi")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TextureRect2" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 85.0
offset_top = -123.0
offset_right = 325.0
offset_bottom = 117.0
texture = ExtResource("8_k44pf")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_left = 321.0
offset_top = -122.0
offset_right = 561.0
offset_bottom = 118.0
texture = ExtResource("8_vgytq")
expand_mode = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Panel/Login" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="Panel/Register" to="." method="_on_SignupButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
